# MCPhoton

./: CMakeLists.txt  ComptonEffect.cpp~  ComptonEffect.hpp~  ComptonEffect2.hpp  Fe.txt~  Fe_abs.txt~  H.txt  H.txt~  Hydrogen.txt  Hydrogen.txt~  InterpTest.cpp  InterpTest.cpp~  Interpolate.hpp~  KNLinRej.cpp  KNLinRej.cpp~  KNLinRej.hpp~  KleinNishina.cpp  KleinNishina.cpp~  KleinNishina.hpp  KleinNishina.hpp~  LinInterp.cpp  LinInterp.cpp~  LinInterp.hpp  LinInterp.hpp~  LinInterp2.cpp~  LogInterp.hpp~  LogInterpTest.hpp~  MCPhoton.cpp~  PhotonScatter.hpp  PhotonScatter.hpp~  PhotonTransport.hpp  README.md  a.out  compton.cpp~  histogram.cpp  histogram.cpp~  histogram.hpp~  histogram.txt  location.txt
data/: Fe_tot.txt
src/: AzimuthalRej.cpp  AzimuthalRej.cpp~  AzimuthalRej.hpp  CMakeLists.txt  CMakeLists.txt~  ComptonEffect.cpp  ComptonEffect.hpp  ComptonScatter.cpp  ComptonScatter.cpp~  ComptonScatter.hpp  ComptonScatter.hpp~  Fe.txt  Interpolate.cpp  Interpolate.cpp~  Interpolate.hpp  Interpolate.hpp~  KNLinRej.cpp  KNLinRej.hpp  KNRej.cpp  KNRej.cpp~  KNRej.hpp  KNRej.hpp~  LogInterp.hpp  MCPhoton.cpp  MCPhoton.cpp~  MCPhoton.hpp  MCPhoton.hpp~  PhotonScatter.cpp  PhotonScatter.cpp~  PhotonScatter.hpp  PhotonScatter.hpp~  PhotonTransport.cpp  PhotonTransport.hpp  RingDetector.cpp  RingDetector.hpp  S_Fe.txt  TPPhotonScatter.hpp~  compton.cpp  histogram.hpp
